--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
+name: samdul
 services:
-  blog_1:
+  blog:
     build: ./docker/httpd
-    container_name: blog-1
     ports:
-      - 8051:80
-  blog_2:
-    build: ./docker/httpd
-    container_name: blog-2
-    ports:
-      - 8052:80
-  blog_3:
-    build: ./docker/httpd
-    container_name: blog-3
+      - 80
+    deploy:
+      mode: replicated
+      replicas: 1
+        #  blog_2:
+        #    build: ./docker/httpd
+        #    container_name: blog-2
+        #    ports:
+        #      - 8052:80
 
   load_balancer:
     container_name: blog-lb
@@ -19,15 +19,6 @@ services:
     ports:
       - 8949:80
     depends_on:
-      - blog_1
-      - blog_2
-      - blog_3
+      - blog
     links:
-      - blog_1
-      - blog_2
-      - blog_3
-    develop:
-      watch:
-        - action: sync+restart
-          path: ./docker/nginx/default.conf
-          target: /etc/nginx/conf.d/default.conf
+      - blog
