--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+    environment:
+      - VIRTUAL_HOST=localhost
+      - VIRTUAL_PORT=80
         #  blog_2:
         #    build: ./docker/httpd
         #    container_name: blog-2
@@ -14,11 +17,10 @@ services:
         #      - 8052:80
 
   load_balancer:
-    container_name: blog-lb
-    build: ./docker/nginx
+    image: nginxproxy/nginx-proxy
     ports:
       - 8949:80
     depends_on:
       - blog
-    links:
-      - blog
+    volumes:
+      - /var/run/docker.sock:/tmp/docker.sock:ro
