--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,13 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+      resources:
+        reservations:
+          cpus: '0.05'
+          memory: 50M
+        limits:
+          cpus: '0.01'
+          memory: 50M
     environment:
       - VIRTUAL_HOST=localhost
       - VIRTUAL_PORT=80
@@ -17,7 +24,7 @@ services:
         #      - 8052:80
 
   load_balancer:
-    image: nginxproxy/nginx-proxy
+    image: nginxproxy/nginx-proxy:1.6
     ports:
       - 8949:80
     depends_on:
